--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -17,6 +17,15 @@
             android:layout_centerInParent="true"
             android:text="预测结果"
             />
+        <ImageView
+            android:id="@+id/iv_collect"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:src="@mipmap/ic_collect_normal"
+            android:layout_marginRight="16dp"
+            />
     </RelativeLayout>
     <ScrollView
         android:layout_marginTop="10dp"
