--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,6 +28,10 @@
                 android:text="概率预测"
                 />
         </RelativeLayout>
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            >
         <EditText
             android:id="@+id/et_num"
             android:inputType="number"
@@ -41,7 +45,16 @@
             android:layout_marginTop="16dp"
             android:gravity="center_horizontal"
             />
-
+            <ImageView
+                android:id="@+id/iv_next"
+                android:padding="8dp"
+                android:layout_width="35dp"
+                android:layout_height="35dp"
+                android:src="@mipmap/ic_select_bottom"
+                android:layout_gravity="right|center"
+                android:layout_marginRight="18dp"
+                />
+        </FrameLayout>
         <EditText
         android:id="@+id/et_jz"
         android:inputType="numberDecimal"
